# chess-console-game-modded-by-koala

./: .gitignore  README.md
chess_console-mod-by-koala/chess_console-master/source/: ZERO_CHECK.vcxproj.filters  chess.vcxproj  chess.vcxproj.filters  user_interface.cpp
chess_console-mod-by-koala/source/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  cmake_install.cmake
source/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Chess_console.vcxproj  Chess_console.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  chess.cpp  chess.sln  cmake_install.cmake  includes.h  main.cpp  serialib.cpp  serialib.h  temp_in.txt  user_interface.cpp  user_interface.h
source/Chess_console/x64/Debug/: Chess_console.exe.recipe  Chess_console.ilk  Chess_console.res  RDa14924  vc143.idb
source/Chess_console/x64/Debug/Chess_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess_console.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
source/x64/Debug/: temp_in.txt  temp_out.txt  test.bat
